--- a/ELT/docker-compose.yaml
+++ b/ELT/docker-compose.yaml
@@ -37,19 +37,19 @@ services:
       - source_postgres
       - destination_postgres
   dbt:
-    image: ghcr.io/dbt-labs/dbt-postgres:1.47
+    image: ghcr.io/dbt-labs/dbt-postgres:1.4.7
     command:
       [
         "run",
         "--profiles-dir",
         "/root",
-        "--project-dir"
+        "--project-dir",
         "/dbt"
       ]
     networks:
         - elt_network
     volumes:
-      - ./dbt_postgres:/dbt
+      - ./dbt:/dbt
       - C:/Users/IT Admin/.dbt:/root
     depends_on:
       - elt_script
