--- a/ELT/docker-compose.yaml
+++ b/ELT/docker-compose.yaml
@@ -49,10 +49,11 @@ services:
     networks:
         - elt_network
     volumes:
-      - ./dbt:/dbt
+      - ./custom_postgres:/dbt
       - C:/Users/IT Admin/.dbt:/root
     depends_on:
-      - elt_script
+      elt_script:
+        condition: service_completed_successfully
     environment:
         DBT_PROFILE: default 
         DBT_TARGET: dev
