--- a/ELT/docker-compose.yaml
+++ b/ELT/docker-compose.yaml
@@ -26,37 +26,37 @@ services:
       POSTGRES_PASSWORD: secret
 
 
-  elt_script:
-    build:
-      context: ./elt
-      dockerfile: Dockerfile
-    command: ["python", "elt_script.py"]
-    networks:
-      - elt_network
-    depends_on:
-      - source_postgres
-      - destination_postgres
-  dbt:
-    image: ghcr.io/dbt-labs/dbt-postgres:1.4.7
-    command:
-      [
-        "run",
-        "--profiles-dir",
-        "/root",
-        "--project-dir",
-        "/dbt"
-      ]
-    networks:
-        - elt_network
-    volumes:
-      - ./custom_postgres:/dbt
-      - C:/Users/IT Admin/.dbt:/root
-    depends_on:
-      elt_script:
-        condition: service_completed_successfully
-    environment:
-        DBT_PROFILE: default 
-        DBT_TARGET: dev
+  # elt_script:
+  #   build:
+  #     context: ./elt
+  #     dockerfile: Dockerfile
+  #   command: ["python", "elt_script.py"]
+  #   networks:
+  #     - elt_network
+  #   depends_on:
+  #     - source_postgres
+  #     - destination_postgres
+  # dbt:
+  #   image: ghcr.io/dbt-labs/dbt-postgres:1.4.7
+  #   command:
+  #     [
+  #       "run",
+  #       "--profiles-dir",
+  #       "/root",
+  #       "--project-dir",
+  #       "/dbt"
+  #     ]
+  #   networks:
+  #       - elt_network
+  #   volumes:
+  #     - ./custom_postgres:/dbt
+  #     - C:/Users/IT Admin/.dbt:/root
+  #   depends_on:
+  #     elt_script:
+  #       condition: service_completed_successfully
+  #   environment:
+  #       DBT_PROFILE: default 
+  #       DBT_TARGET: dev
     
 
     postgres:
@@ -140,8 +140,7 @@ services:
         AIRFLOW_WWW_USER_USERNAME: airflow
         AIRFLOW_WWW_USER_PASSWORD: password
         AIRFLOW__WEBSERVER__SECRET_KEY: secret
-      ports:
-        - "8080:8080"
+      
       command: scheduler 
 
 
